--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
-#root {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +46,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
