--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,12 +1,11 @@
-/* Navbar.css */
 .navLink {
-  color: black; /* Default link color */
-  text-decoration: none; /* Remove underline */
-  padding: 10px; /* Add some padding */
-  transition: color 0.3s ease; /* Smooth transition for color change */
+  color: #fff;
+  text-decoration: none;
+  padding: 10px;
+  transition: all 0.5s ease;
 }
 
 .navLink:hover {
-  color: white; /* Color on hover */
-  background-color: black; /* Background color on hover */
+  transform: scale(1.3);
+  color: white;
 }
